--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
 	      <div id="main">
           <h3>About:</h3>
           <br />
-          <p>Welcome to monsterb | daemons, gnus, and penguins. Oh my! Formerly known as monsterb.org. This site is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, illumos, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Oggcasting, OpenSource, Scripting, Unix, and Video Games.</p>
+          <p>Welcome to monsterb | daemons, gnus, and penguins. Oh my! Formerly known as monsterb.org. This site is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, Hot Rods, illumos, Kentucky Bourbon, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Oggcasting, OpenSource, Rat Rods, Scripting, T-Buckets, Unix, and Video Games.</p>
           <br />
-          <p>Site Update: April 11, 2016</p>	  
+          <p>Site Updated: September 6, 2016</p>	  
 			 <br />
 
 	     </div>
