--- a/online-courses.html
+++ b/online-courses.html
@@ -38,7 +38,7 @@
           <br /><br /><br /><br />
 
           <h3><a id="Cloud">Cloud Technologies</a> (2):</h3>
-          <p>A Cloud Guru <a href="https://acloudguru.com/">https://acloudguru.com/</a>"</p>
+          <p>A Cloud Guru <a href="https://acloudguru.com/">https://acloudguru.com/</a></p>
           <p>CloudAcademy <a href="https://cloudacademy.com/">https://cloudacademy.com/</a></p>
 
           <br /><br /><br /><br />
